# tcli

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  examples.yml
examples/: linux.c
examples/arduino/: arduino.ino
examples/common/: example_cmds.h
examples/linux/: main.c
examples/platformio/: platformio.ini
fuzz/: CMakeLists.txt  fuzz_stateful.c  fuzz_stateless.c
include/: tcli.h  tcli_ext.h  tclie.h
source/: tcli.c  tcli_ext.c  tclie.c
tests/: CMakeLists.txt  test_example_cmds.c  test_tcli_basic.c  test_tcli_escape.c  test_tcli_io.c  test_tclie_hooks.c  test_tclie_options.c  test_tclie_pattern.c  test_tclie_users.c
